--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
 title: NWAFOR C,J
-subtitle: Life is a journey, so do science ...
+subtitle: Life is a journey, so is science ...
 ---
